deployment/wso2apim-deployment.yaml
# Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wso2apim-with-analytics-apim
spec:
  replicas: 1
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: wso2apim-with-analytics-apim
    spec:
      containers:
      - name: wso2apim-with-analytics-apim-worker
        image: docker.wso2.com/wso2am:2.6.0
        livenessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - nc -z localhost 9443
          initialDelaySeconds: 150
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - /bin/bash
              - -c
              - nc -z localhost 9443
          initialDelaySeconds: 150
          periodSeconds: 10
        imagePullPolicy: Always
        ports:
        -
          containerPort: 8280
          protocol: "TCP"
        -
          containerPort: 8243
          protocol: "TCP"
        -
          containerPort: 9763
          protocol: "TCP"
        -
          containerPort: 9443
          protocol: "TCP"
        -
          containerPort: 5672
          protocol: "TCP"
        -
          containerPort: 9711
          protocol: "TCP"
        -
          containerPort: 9611
          protocol: "TCP"
        -
          containerPort: 7711
          protocol: "TCP"
        -
          containerPort: 7611
          protocol: "TCP"
        volumeMounts:
        - name: apim-storage-volume
          mountPath: /home/wso2carbon/wso2am-2.6.0/repository/deployment/server
        - name: apim-conf
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf
        - name: apim-conf-datasources
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/datasources
        - name: shared-logs
          mountPath: /home/wso2carbon/wso2am-2.6.0/repository/logs/
        imagePullSecrets:
              - name: wso2creds
      - name: logstash
        image: maanadev/logstash:6.5.3-custom
        volumeMounts:
        - name: shared-logs
          mountPath: /usr/share/logstash/mylogs/
      serviceAccountName: "wso2svc-account"
      volumes:
      - name: apim-storage-volume
        persistentVolumeClaim:
          claimName: wso2apim-with-analytics-apim-deployment-volume-claim
      - name: apim-conf
        configMap:
          name: apim-conf
      - name: apim-conf-datasources
        configMap:
          name: apim-conf-datasources
      - name: shared-logs
          emptyDir: {}
